to 8g compile